# clive

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml
.cursor/rules/: code_quality.mdc  repo.mdc  rust.mdc
docs/: README.md  ai_workflow.md
grammars/: json.gbnf
src/: cache.rs  config.rs  ffmpeg.rs  lib.rs  llama.rs  main.rs
src/commands/: mod.rs  wordclip.rs
src/utils/: cache.rs  config.rs  fetch.rs  ffmpeg.rs  llama.rs  mod.rs  vec_db.rs  wordclip.rs
