[package]
name = "clive"
version = "0.1.0"
edition = "2024"

[dependencies]
whisper-rs = { version = "0.14.2", features = ["vulkan"] }
clap = { version = "4.5.3", features = ["derive"] }
symphonia = { version = "0.5.3", features = ["all"] }
anyhow = "1.0.81"
tempfile = "3.7.0"
dirs = "6.0.0"
serde_json = "1.0.140"
serde = "1.0.219"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.14.2", features = ["metal"] }
