[package]
name = "clive"
version = "0.1.0"
edition = "2021"
description = "Clive is a CLI tool for transcribing and clipping audio"
authors = ["Chandler <chandler@chigzz.com>"]
license = "MIT"
repository = "https://github.com/chand1012/clive"
readme = "README.md"
documentation = "README.md"
keywords = ["audio", "transcription", "video", "cli", "whisper"]
categories = [
  "multimedia::audio",
  "multimedia::video",
  "command-line-utilities",
  "science",
]

[dependencies]
whisper-rs = { version = "0.14.2" }
clap = { version = "4.5.3", features = ["derive"] }
symphonia = { version = "0.5.3", features = ["all"] }
anyhow = "1.0.81"
tempfile = "3.7.0"
dirs = "6.0.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
ureq = "3.0.10"
toml = "0.8.20"
log = "0.4"
env_logger = "0.11"
hound = "3.5.1"
rusqlite = { version = "0.34.0", features = ["bundled"] }
sqlite-vec = "0.1.6"
zerocopy = "0.8.24"
llama-cpp-2 = "0.1.102"
encoding_rs = "0.8.35"


[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.14.2", features = ["metal"] }
llama-cpp-2 = { version = "0.1.101", features = ["metal"] }

[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.14.2", features = ["vulkan"] }
llama-cpp-2 = { version = "0.1.101", features = ["vulkan"] }

[target.'cfg(target_os = "linux")'.dependencies]
whisper-rs = { version = "0.14.2", features = ["vulkan"] }
llama-cpp-2 = { version = "0.1.101", features = ["vulkan"] }
